--- a/src/popup.html
+++ b/src/popup.html
@@ -3,12 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="script.js" type="text/javascript"></script>
-        <title>Sarcasmic</title>
+    <script src="popup.js"></script>
+        <title>Sponge Mock</title>
     </head>
     <body>
         <textarea id="input"></textarea>
-        <button>Convert</button>
-        <button>copy</button>
+        <div id="output">
+            <p></p>
+        </div>
+        <button id="covert" onclick="convert()">Convert</button>
+        <button onclick="copy()">copy</button>
     </body>
+<style>
+    
+</style>
+    <script>
+        console.log("This works");
+    </script>
+
 </html>
